formControl and formGroup (error)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,7 @@
   </div>
 </div>
 
-<app-demo-form-sku></app-demo-form-sku>
+<div class="ui main text container">
+  <!-- <app-demo-form-sku></app-demo-form-sku> -->
+  <app-demo-form-sku-with-builder></app-demo-form-sku-with-builder>
+</div>
