--- a/src/app/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
+++ b/src/app/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
@@ -10,7 +10,7 @@
         type="text"
         id="skuInput"
         placeholder="SKU"
-        [formControl]="myForm.controls['sku']" />
+        formControlName="sku" />
     </div>
     <button type="submit" class="ui button">Submit</button>
   </form>
