--- a/src/app/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
+++ b/src/app/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
@@ -3,15 +3,34 @@
   <form
     [formGroup]="myForm"
     (ngSubmit)="onSubmit(myForm.value)"
-    class="ui form">
-    <div class="field">
+    class="ui form"
+    [class.error]="!myForm.valid && myForm.touched">
+    <div
+      class="field"
+      [class.error]="
+        !myForm.controls['sku'].valid && myForm.controls['sku'].touched
+      ">
       <label for="skuInput">SKU</label>
       <input
         type="text"
         id="skuInput"
         placeholder="SKU"
         formControlName="sku" />
+      <div *ngIf="!myForm.controls['sku'].valid" class="ui error message">
+        SKU is invalid
+      </div>
+      <div
+        *ngIf="myForm.controls['sku'].hasError('required')"
+        class="ui error message">
+        SKU is required
+      </div>
+      <div
+        *ngIf="myForm.controls['sku'].hasError('invalidSku')"
+        class="ui error message">
+        SKU must begin with <span>123</span>
+      </div>
     </div>
+    <div *ngIf="!myForm.valid" class="ui error message">Form is invalid</div>
     <button type="submit" class="ui button">Submit</button>
   </form>
 </div>
