--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,6 @@
 
 <div class="ui main text container">
   <!-- <app-demo-form-sku></app-demo-form-sku> -->
-  <app-demo-form-sku-with-builder></app-demo-form-sku-with-builder>
+  <!-- <app-demo-form-sku-with-builder></app-demo-form-sku-with-builder> -->
+  <app-demo-form-ng-model></app-demo-form-ng-model>
 </div>
