--- a/src/app/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
+++ b/src/app/demo-form-sku-with-builder/demo-form-sku-with-builder.component.html
@@ -1,35 +1,19 @@
 <div class="ui raised segment">
-  <h2 class="ui header">Demo Form: Sku with Builder</h2>
-  <form
-    [formGroup]="myForm"
-    (ngSubmit)="onSubmit(myForm.value)"
-    class="ui form"
-    [class.error]="!myForm.valid && myForm.touched">
-    <div
-      class="field"
-      [class.error]="
-        !myForm.controls['sku'].valid && myForm.controls['sku'].touched
-      ">
-      <label for="skuInput">SKU</label>
+  <h2 class="ui header">Demo Form: with ng-model</h2>
+
+  <div class="ui info message">The product name is: {{ productName }}</div>
+
+  <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm.value)" class="ui form">
+    <div class="field">
+      <label for="productNameInput">Product Name</label>
       <input
         type="text"
-        id="skuInput"
-        placeholder="SKU"
-        formControlName="sku" />
-      <div *ngIf="!myForm.controls['sku'].valid" class="ui error message">
-        SKU is invalid
-      </div>
-      <div
-        *ngIf="myForm.controls['sku'].hasError('required')"
-        class="ui error message">
-        SKU is required
-      </div>
-      <div
-        *ngIf="myForm.controls['sku'].hasError('invalidSku')"
-        class="ui error message">
-        SKU must begin with <span>123</span>
-      </div>
+        id="productNameInput"
+        placeholder="Product Name"
+        name="productName"
+        [(ngModel)]="productName" />
     </div>
+
     <div *ngIf="!myForm.valid" class="ui error message">Form is invalid</div>
     <button type="submit" class="ui button">Submit</button>
   </form>
